--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,17 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    // Spring Web Security
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    // Spring Validation
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    // JWT
+    implementation 'javax.xml.bind:jaxb-api'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'commons-codec:commons-codec:1.15'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    implementation 'com.auth0:java-jwt:3.19.2'
 }
 
 tasks.named('test') {
