--- a/build.gradle
+++ b/build.gradle
@@ -26,23 +26,10 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-    //socket 통신
+    //websocket
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
-    implementation 'org.webjars:sockjs-client:1.5.1'
-    //stomp
-    implementation 'org.webjars:stomp-websocket:2.3.4'
-    //redis
-    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
-    //embedded redis
-    implementation 'it.ozimov:embedded-redis:0.7.2'
-    implementation 'com.google.code.gson:gson:2.8.0'
-    implementation 'javax.xml.bind:jaxb-api'
-    //xss
-    implementation 'org.apache.commons:commons-text:1.9'
-    // text String Escape utils
-    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.9'
-    //캐시를 없애 , 리로딩을 도와준다.
-    implementation 'org.springframework.boot:spring-boot-devtools'
+    implementation 'org.webjars:sockjs-client:1.1.2'
+    implementation 'org.webjars:stomp-websocket:2.3.3-1'
 
     // Oauth2
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
