--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-spring.profiles.active=local
-spring.redis.host=localhost
-spring.redis.port=6380
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=false
+spring.freemarker.cache=false
+spring.jackson.serialization.fail-on-empty-beans=false
