--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:springcoredb
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:springcoredb
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+spring.datasource.url=jdbc:mysql://springboot-database.cwtzcko1atni.ap-northeast-2.rds.amazonaws.com:3306/mydatabase
+spring.datasource.username=admin
+spring.datasource.password=gustjr94
+spring.jpa.hibernate.ddl-auto=update
