--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@
 
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:springcoredb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.settings.web-allow-others=true
