--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=false
 spring.freemarker.cache=false
 spring.jackson.serialization.fail-on-empty-beans=false
+
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:springcoredb
+spring.datasource.username=sa
+spring.datasource.password=
