edit: 깃이그노어 변경

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ bin/
 !**/src/test/**/bin/
 
 ### IntelliJ IDEA ###
+application-database.properties
+
 .idea
 *.iws
 *.iml
@@ -35,4 +37,3 @@ out/
 
 ### VS Code ###
 .vscode/
-**/application-database.properties
