edit: 깃이그노어

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.devtools.restart.enabled=false
 spring.freemarker.cache=false
 spring.jackson.serialization.fail-on-empty-beans=false
 
-spring.profiles.include=database
+spring.profiles.include=db
