--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,10 @@ dependencies {
     implementation 'org.webjars:sockjs-client:1.5.1'
     implementation 'org.webjars:stomp-websocket:2.3.4'
 
+    //redis
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+    implementation group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
+
     // Oauth2
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     // Spring Web Security
