--- a/src/main/resources/application-database.properties
+++ b/src/main/resources/application-database.properties
@@ -9,3 +9,12 @@ spring.h2.console.settings.web-allow-others=true
 spring.datasource.url=jdbc:h2:mem:springcoredb
 spring.datasource.username=sa
 spring.datasource.password=
+
+# Redis Database
+spring.redis.host=localhost
+spring.redis.password=
+spring.redis.port=6379
+spring.redis.jedis.pool.max-idle=8
+spring.redis.jedis.pool.min-idle=0
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-wait=-1
