fix : 개인정보 보호

--- a/src/main/resources/application-database.properties
+++ b/src/main/resources/application-database.properties
@@ -1,7 +1,7 @@
 # MySQL User Database
 #spring.main.datasource.url=jdbc:mysql://springboot-database.cwtzcko1atni.ap-northeast-2.rds.amazonaws.com:3306/hanghaefinal
-#spring.main.datasource.username=admin
-#spring.main.datasource.password=gustjr94
+#spring.main.datasource.username=
+#spring.main.datasource.password=
 
 # H2 Game Logic Database
 spring.h2.console.enabled=true
