fix:Game entity, repository 정리, port:8081로 변경, h2 테이블생성 확인

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=8080
+server.port=8081
 
 spring.freemarker.cache=false
 spring.jackson.serialization.fail-on-empty-beans=false
 
-spring.profiles.include=db
+spring.profiles.include=database
