--- a/src/main/resources/application-database.properties
+++ b/src/main/resources/application-database.properties
@@ -1,12 +1,14 @@
 # MySQL User Database
-#spring.main.datasource.url=jdbc:mysql://springboot-database.cwtzcko1atni.ap-northeast-2.rds.amazonaws.com:3306/hanghaefinal
-#spring.main.datasource.username=
-#spring.main.datasource.password=
+spring.main.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.main.datasource.url=jdbc:mysql://???????:3306/myselectshop
+spring.main.datasource.username=??USERNAME
+spring.main.datasource.password=??????
 
 # H2 Game Logic Database
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
-spring.datasource.url=jdbc:h2:mem:springcoredb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.jdbcUrl=jdbc:h2:mem:springcoredb;DB_CLOSE_DELAY=-1;
 spring.datasource.username=sa
 spring.datasource.password=
 
