fix: 계속되는 오류

--- a/src/main/resources/application-database.properties
+++ b/src/main/resources/application-database.properties
@@ -1,16 +1,19 @@
 # MySQL User Database
-spring.main.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.main.datasource.url=jdbc:mysql://???????:3306/myselectshop
-spring.main.datasource.username=??USERNAME
-spring.main.datasource.password=??????
+spring.me.driverClasain.datasourcsName=com.mysql.cj.jdbc.Driver
+spring.main.datasource.jdbcUrl=jdbc:mysql://springboot-database.cwtzcko1atni.ap-northeast-2.rds.amazonaws.com:3306/userdatabase
+spring.main.datasource.username=admin
+spring.main.datasource.password=gustjr94
 
 # H2 Game Logic Database
+spring.sub.datasource.driverClassName=org.h2.Driver
+spring.sub.datasource.jdbcUrl=jdbc:h2:mem:springcoredb;DB_CLOSE_DELAY=-1;
+spring.sub.datasource.username=sa
+spring.sub.datasource.password=
+
 spring.h2.console.enabled=true
 spring.h2.console.settings.web-allow-others=true
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.jdbcUrl=jdbc:h2:mem:springcoredb;DB_CLOSE_DELAY=-1;
-spring.datasource.username=sa
-spring.datasource.password=
+hibernate.cache.use_second_level_cache=false
+hibernate.cache.use_query_cache=false
 
 # Redis Database
 spring.redis.host=localhost
