fix: h2 DB 2개로 나눠 연결시 성공

--- a/src/main/resources/application-database.properties
+++ b/src/main/resources/application-database.properties
@@ -1,17 +1,27 @@
-# MySQL User Database
-spring.me.driverClasain.datasourcsName=com.mysql.cj.jdbc.Driver
-spring.main.datasource.jdbcUrl=jdbc:mysql://springboot-database.cwtzcko1atni.ap-northeast-2.rds.amazonaws.com:3306/userdatabase
-spring.main.datasource.username=admin
-spring.main.datasource.password=gustjr94
+### MySQL User Database
+#spring.me.driverClasain.datasourcsName=com.mysql.cj.jdbc.Driver
+#spring.main.datasource.jdbcUrl=jdbc:mysql://springboot-database.cwtzcko1atni.ap-northeast-2.rds.amazonaws.com:3306/userdatabase
+#spring.main.datasource.username=admin
+#spring.main.datasource.password=gustjr94
 
 # H2 Game Logic Database
-spring.sub.datasource.driverClassName=org.h2.Driver
-spring.sub.datasource.jdbcUrl=jdbc:h2:mem:springcoredb;DB_CLOSE_DELAY=-1;
-spring.sub.datasource.username=sa
-spring.sub.datasource.password=
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.Url=jdbc:h2:mem:springcoredb;DB_CLOSE_DELAY=-1;
+#spring.datasource.username=sa
+#spring.datasource.password=
 
+# jdbc.X
+jdbc.driverClassName=org.h2.Driver
+user.jdbc.url=jdbc:h2:mem:spring_user;DB_CLOSE_DELAY=-1
+game.jdbc.url=jdbc:h2:mem:spring_game;DB_CLOSE_DELAY=-1
+jdbc.user=sa
+jdbc.pass=
+
+# hibernate.X
 spring.h2.console.enabled=true
-spring.h2.console.settings.web-allow-others=true
+hibernate.dialect=org.hibernate.dialect.H2Dialect
+hibernate.show_sql=false
+hibernate.hbm2ddl.auto=update
 hibernate.cache.use_second_level_cache=false
 hibernate.cache.use_query_cache=false
 
