fix: 코드 리펙토링

--- a/src/main/resources/application-database.properties
+++ b/src/main/resources/application-database.properties
@@ -4,12 +4,13 @@
 #spring.main.datasource.username=admin
 #spring.main.datasource.password=gustjr94
 
-# jdbc.X
-jdbc.driverClassName=org.h2.Driver
-user.jdbc.url=jdbc:h2:mem:spring_user;DB_CLOSE_DELAY=-1
-game.jdbc.url=jdbc:h2:mem:spring_game;DB_CLOSE_DELAY=-1
-jdbc.user=sa
-jdbc.pass=
+spring.datasource.jdbcUrl=jdbc:h2:mem:spring_user;DB_CLOSE_DELAY=-1
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.second-datasource.jdbcUrl=jdbc:h2:mem:spring_game;DB_CLOSE_DELAY=-1
+spring.second-datasource.username=sa
+spring.second-datasource.password=
 
 # hibernate.X
 spring.h2.console.enabled=true
