--- a/src/main/resources/application-database.properties
+++ b/src/main/resources/application-database.properties
@@ -1,20 +1,15 @@
-### MySQL User Database
-#spring.me.driverClasain.datasourcsName=com.mysql.cj.jdbc.Driver
-#spring.main.datasource.jdbcUrl=jdbc:mysql://springboot-database.cwtzcko1atni.ap-northeast-2.rds.amazonaws.com:3306/userdatabase
-#spring.main.datasource.username=admin
-#spring.main.datasource.password=gustjr94
+## MySQL User Database
+spring.datasource.jdbcUrl=jdbc:mysql://springboot-database.cwtzcko1atni.ap-northeast-2.rds.amazonaws.com:3306/userdatabase
+spring.datasource.username=admin
+spring.datasource.password=gustjr94
 
-spring.datasource.jdbcUrl=jdbc:h2:mem:spring_user;DB_CLOSE_DELAY=-1
-spring.datasource.username=sa
-spring.datasource.password=
-
+## H2 GameLogic Database
 spring.second-datasource.jdbcUrl=jdbc:h2:mem:spring_game;DB_CLOSE_DELAY=-1
 spring.second-datasource.username=sa
 spring.second-datasource.password=
 
 # hibernate.X
 spring.h2.console.enabled=true
-hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.show_sql=false
 hibernate.hbm2ddl.auto=update
 hibernate.cache.use_second_level_cache=false
