fix: hibernate 적용안되서 application.properties로 옮김

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,12 @@ server.port=8080
 spring.freemarker.cache=false
 spring.jackson.serialization.fail-on-empty-beans=false
 
+# hibernate.X
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
+hibernate.show_sql=false
+hibernate.hbm2ddl.auto=update
+hibernate.cache.use_second_level_cache=false
+hibernate.cache.use_query_cache=false
+
 spring.profiles.include=database
