--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,5 +32,5 @@ jobs:
       shell: bash
     
     - name: Build with Gradle
-      run: ./gradlew clean build
+      run: ./gradlew build
       shell: bash
