--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,6 +13,10 @@ on:
       - hyunsuk
       - main
 
+env:
+  S3_BUCKET_NAME: drunken-wizard-s3
+  PROJECT_NAME: drunken-wizard
+
 jobs:
   build:
   
@@ -34,3 +38,16 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
       shell: bash
+
+    - name: Make zip file
+      run: zip -r ./drunken.zip .
+      shell: bash
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+    - name: Upload to S3
+      run: aws s3 cp --region ap-northeast-2 ./drunken.zip s3://$S3_BUCKET_NAME/$PROJECT_NAME/drunken
