--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -48,6 +48,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-
+        aws-region: ${{ secrets.AWS_REGION }}
+        
     - name: Upload to S3
-      run: aws s3 cp --region ap-northeast-2 ./drunken.zip s3://$S3_BUCKET_NAME/$PROJECT_NAME/drunken
+      run: aws s3 cp --region ap-northeast-2 ./drunken.zip s3://$S3_BUCKET_NAME/$PROJECT_NAME/drunken.zip
