--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -49,6 +49,9 @@ jobs:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ secrets.AWS_REGION }}
-        
+
     - name: Upload to S3
       run: aws s3 cp --region ap-northeast-2 ./drunken.zip s3://$S3_BUCKET_NAME/$PROJECT_NAME/drunken.zip
+
+    - name: Code Deploy
+      run: aws deploy create-deployment --application-name springboot-codedeploy --deployment-config-name CodeDeployDefault.AllAtOnce --deployment-group-name springboot-codedeploy-group --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=$PROJECT_NAME/drunken.zip
