--- a/appspec.yml
+++ b/appspec.yml
@@ -4,3 +4,21 @@ files:
   - source: /
     destination: /home/ubuntu/drunken-wizard # 프로젝트 이름
     overwrite: yes
+
+permissions:
+  - object: /
+    pattern: "**"
+    owner: ubuntu
+    group: ubuntu
+
+hooks:
+  ApplicationStart:
+    - location: scripts/run_new_was.sh
+      timeout: 180
+      runas: ubuntu
+    - location: scripts/health_check.sh
+      timeout: 180
+      runas: ubuntu
+    - location: scripts/switch.sh
+      timeout: 180
+      runas: ubuntu
