fix: 환경변수 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ hibernate.hbm2ddl.auto=update
 hibernate.cache.use_second_level_cache=false
 hibernate.cache.use_query_cache=false
 
+spring.profiles.include=database
