--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,6 @@ hibernate.hbm2ddl.auto=update
 hibernate.cache.use_second_level_cache=false
 hibernate.cache.use_query_cache=false
 
+logging-module.version=0.0.1
+
 spring.profiles.include=database
